--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "postinstall": "ng build --prod --aot"
+    "postinstall": "ng build --prod --aot --app 1"
   },
   "private": true,
   "dependencies": {
